Implementación del menu. Agregamos CDN de Bulma Framework y Fontawesone.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<title>Erick Zarate Hernández</title>
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
+
+	<link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
-	Mi página web personal
-	@ezarateh
+	<section class="hero is-primary is-medium">
+		<div class="hero-head">
+			<header class="nav">
+				<div class="container">
+					<div class="nav-left">
+						<a href="#" class="nav-item">
+							<img src="asset/img/logo.png" alt="Erick Zarate Hernández" class="logo">
+						</a>
+					</div>
+					<div class="nav-right nav-menu">
+						<a href="https://github.com/ErickZH" target="_blank" class="nav-item">
+							GitHub
+						</a>
+						<a href="https://twitter.com/ezarateh" target="_blank" class="nav-item">
+							Twitter
+						</a>
+						<a href="https://www.facebook.com/erick.zaratehernandez" target="_blank" class="nav-item">
+							Facebook
+						</a>
+						<a href="https://www.instagram.com/erick_hz" target="_blank" class="nav-item">
+							Instagram
+						</a>
+						<span class="nav-item">
+							<a href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank" class="button is-primary is-inverted">
+								<span class="icon">
+									<i class="fa fa-youtube"></i>
+								</span>
+								<span>YouTube</span>
+							</a>
+						</span>
+					</div>
+				</div>
+			</header>
+		</div>
+	</section>
 </body>
 </html>
