Modificación la vista.

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 	<link rel="stylesheet" href="asset/css/style.css">
 </head>
 <body>
-	<section class="hero is-primary is-medium">
+	<section class="hero is-info is-medium">
 		<div class="hero-head">
 			<header class="nav">
 				<div class="container">
 					<div class="nav-left">
-						<a href="#" class="nav-item">
-							<img src="asset/img/logo.png" alt="Erick Zarate Hernández" class="logo">
+						<a href="https://erickzh.github.io" class="nav-item">
+							EZH
 						</a>
 					</div>
 					<div class="nav-right nav-menu">
@@ -34,7 +34,7 @@
 							Instagram
 						</a>
 						<span class="nav-item">
-							<a href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank" class="button is-primary is-inverted">
+							<a href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank" class="button is-danger">
 								<span class="icon">
 									<i class="fa fa-youtube"></i>
 								</span>
@@ -44,6 +44,34 @@
 					</div>
 				</div>
 			</header>
+		</div>
+		<div class="hero-body">
+			<div class="container">
+				<div class="columns">
+					<div class="column is-three-quarters">
+						<h1 class="title">Erick Zarate Hernández</h1>
+						<p>
+							Desarrollador Web <br>
+							Actualmente trabajo con el Framework Laravel 5.5. <br>
+							Me apasiona aprender nuevas tecnologias Open Source. <br>
+							Amo utilizar GNU/Linux. <br>
+							Me gusta ayudar a los demas compartiendo tips y tutoriales de programación.
+						</p>	
+					</div>
+					<div class="column">
+						<div class="card">
+							<div class="card-image">
+								<figure class="image is-4by4">
+									<img src="asset/img/avatar.jpg" alt="Erick Zarate">
+								</figure>
+							</div>
+							<div class="card-content notification is-primary">
+								<p class="title is-6">Soy yo</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 </body>
