--- a/index.html
+++ b/index.html
@@ -6,73 +6,92 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.4.3/css/bulma.min.css">
-
-	<link rel="stylesheet" href="asset/css/style.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css">
 </head>
 <body>
-	<section class="hero is-info is-medium">
-		<div class="hero-head">
-			<header class="nav">
-				<div class="container">
-					<div class="nav-left">
-						<a href="https://erickzh.github.io" class="nav-item">
-							EZH
-						</a>
-					</div>
-					<div class="nav-right nav-menu">
-						<a href="https://github.com/ErickZH" target="_blank" class="nav-item">
-							GitHub
-						</a>
-						<a href="https://twitter.com/ezarateh" target="_blank" class="nav-item">
-							Twitter
-						</a>
-						<a href="https://www.facebook.com/erick.zaratehernandez" target="_blank" class="nav-item">
-							Facebook
-						</a>
-						<a href="https://www.instagram.com/erick_hz" target="_blank" class="nav-item">
-							Instagram
-						</a>
-						<span class="nav-item">
-							<a href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank" class="button is-danger">
-								<span class="icon">
-									<i class="fa fa-youtube"></i>
-								</span>
-								<span>YouTube</span>
-							</a>
-						</span>
-					</div>
-				</div>
-			</header>
-		</div>
-		<div class="hero-body">
-			<div class="container">
-				<div class="columns">
-					<div class="column is-three-quarters">
-						<h1 class="title">Erick Zarate Hernández</h1>
-						<p>
-							Desarrollador Web <br>
-							Actualmente trabajo con el Framework Laravel 5.5. <br>
-							Me apasiona aprender nuevas tecnologias Open Source. <br>
-							Amo utilizar GNU/Linux. <br>
-							Me gusta ayudar a los demas compartiendo tips y tutoriales de programación.
-						</p>	
-					</div>
-					<div class="column">
-						<div class="card">
-							<div class="card-image">
-								<figure class="image is-4by4">
-									<img src="asset/img/avatar.jpg" alt="Erick Zarate">
-								</figure>
-							</div>
-							<div class="card-content notification is-primary">
-								<p class="title is-6">Soy yo</p>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
+	<nav class="navbar is-info">
+  		<div class="navbar-brand">
+    		<a class="navbar-item" href="https://erickzh.github.io/">
+      			<img src="asset/img/logoezh.png" alt="Erick Zarate Hernández" width="112" height="28">
+    		</a>
+    		<div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+		      	<span></span>
+		      	<span></span>
+		      	<span></span>
+    		</div>
+  		</div>
+
+  		<div id="navbarExampleTransparentExample" class="navbar-menu">
+    		<div class="navbar-start">
+      			<a class="navbar-item" href="https://erickzh.github.io/">
+        			Inicio
+      			</a>
+      			<div class="navbar-item has-dropdown is-hoverable">
+		        	<a class="navbar-link" href="#">
+		          		Sobre mi
+		        	</a>
+        			<div class="navbar-dropdown is-boxed">
+          				<a class="navbar-item" href="#">
+            				Profesión
+          				</a>
+			          	<a class="navbar-item" href="#">
+			            	Pasatiempos
+			          	</a>
+          				<a class="navbar-item" href="#">
+            				Proyectos
+          				</a>
+          				<a class="navbar-item" href="#">
+            				Certificaciones
+          				</a>
+        			</div>
+      			</div>
+    		</div>
+
+    		<div class="navbar-end">
+      			<div class="navbar-item">
+        			<div class="field is-grouped">
+        				<p class="control">
+            				<a class="button is-info" href="https://github.com/ErickZH" target="_blank">
+              					<span class="icon">
+                					<i class="fa fa-github"></i>
+              					</span>
+            				</a>
+          				</p>
+          				<p class="control">
+            				<a class="button is-info" href="https://twitter.com/ezarateh" target="_blank">
+              					<span class="icon">
+                					<i class="fa fa-twitter"></i>
+              					</span>
+            				</a>
+          				</p>
+          				<p class="control">
+            				<a class="button is-info" href="https://www.instagram.com/erick_hz" target="_blank">
+              					<span class="icon">
+                					<i class="fa fa-instagram"></i>
+              					</span>
+            				</a>
+          				</p>
+          				<p class="control">
+            				<a class="button is-info" href="https://www.facebook.com/erick.zaratehernandez" target="_blank">
+              					<span class="icon">
+                					<i class="fa fa-facebook-official"></i>
+              					</span>
+            				</a>
+          				</p>
+			          	<p class="control">
+			            	<a class="button is-danger" href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank">
+				              	<span class="icon">
+				                	<i class="fa fa-youtube-play"></i>
+				              	</span>
+			              		<span>YouTube</span>
+			            	</a>
+			          	</p>
+        			</div>
+      			</div>
+    		</div>
+  		</div>
+	</nav>
+
+	<script src="asset/js/main.js"></script>
 </body>
 </html>
