Se completo la información de certificaciones :speak_no_evil:

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Erick Zarate Hernández</title>
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-	
+
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css">
 </head>
 <body>
@@ -41,7 +41,7 @@
                             <a class="navbar-item" href="proyectos.html">
                                 Proyectos
                             </a>
-                            <a class="navbar-item" href="#">
+                            <a class="navbar-item" href="certificaciones.html">
                                 Certificaciones
                             </a>
                         </div>
@@ -117,7 +117,7 @@
                 </a>
             </li>
             <li>
-                <a>
+                <a href="certificaciones.html">
                     <span class="icon is-small"><i class="fa fa-trophy"></i></span>
                     <span>Certificaciones</span>
                 </a>
@@ -133,19 +133,19 @@
             <h3 class="subtitle">Las tecnológias y herramientas que utilizo en mi día a día son las siguientes:</h3>
             <ul>
                 <li>
-                    Laravel 5.5 
+                    Laravel 5.5
                     <span class="icon has-text-danger">
                         <i class="fa fa-heart"></i>
                     </span>
                 </li>
                 <li>
-                    Vue js 
+                    Vue js
                 </li>
                 <li>
-                    Axios 
+                    Axios
                 </li>
                 <li>
-                    Git 
+                    Git
                 </li>
                 <li>
                     HTML 5, CSS 3 y JavaScript
