--- a/certificaciones.html
+++ b/certificaciones.html
@@ -38,10 +38,10 @@
                             <a class="navbar-item" href="https://erickzh.github.io/">
                                 Profesión
                             </a>
-                            <a class="navbar-item is-active" href="proyectos.html">
+                            <a class="navbar-item" href="proyectos.html">
                                 Proyectos
                             </a>
-                            <a class="navbar-item" href="certificaciones.html">
+                            <a class="navbar-item is-active" href="certificaciones.html">
                                 Certificaciones
                             </a>
                         </div>
@@ -110,14 +110,14 @@
                     <span>Profesión</span>
                 </a>
             </li>
-            <li class="is-active">
-                <a>
+            <li>
+                <a href="proyectos.html">
                     <span class="icon is-small"><i class="fa fa-code"></i></span>
                     <span>Proyectos</span>
                 </a>
             </li>
-            <li>
-                <a href="certificaciones.html">
+            <li class="is-active">
+                <a>
                     <span class="icon is-small"><i class="fa fa-trophy"></i></span>
                     <span>Certificaciones</span>
                 </a>
@@ -127,45 +127,49 @@
 
     <section class="section">
         <div class="container">
-            <h1 class="title">Proyectos</h1>
-            <h2 class="subtitle">Estos son algunos de los proyectos en los que he trabajado.</h2>
-            <h3 class="subtitle">Si gustas puedes contribuir ;)</h3>
+            <h1 class="title">Certificaciones</h1>
             <hr>
             <div class="columns">
                 <div class="column">
                     <div class="card">
-                        <header class="card-header">
-                            <p class="card-header-title">
-                                Kit del Programador
-                            </p>
-                        </header>
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="asset/img/genexus.jpg" alt="Certificación Genexus">
+                            </figure>
+                        </div>
                         <div class="card-content">
                             <div class="content">
-                                Este proyecto es una aplicación móvil cuyo objetivo es servir de herramienta para la realización de operaciones aritmeticas (suma, resta, multiplicación y división) en cualquier base númerica (base 2 a base 16).
+                                Analista GeneXus X Evolution 3
                             </div>
                         </div>
-                        <footer class="card-footer">
-                            <a href="https://github.com/ErickZH/kitdelprogramador" class="card-footer-item" target="_blank">Ver Repositorio</a>
-                            <a href="https://play.google.com/store/apps/details?id=ezh.kitdelprogramador" class="card-footer-item" target="_blank">Descargar App</a>
-                        </footer>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
-                        <header class="card-header">
-                            <p class="card-header-title">
-                                Salva tu vida
-                            </p>
-                        </header>
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="asset/img/git.png" alt="Certificación Genexus">
+                            </figure>
+                        </div>
                         <div class="card-content">
                             <div class="content">
-                                Este proyecto es una aplicación móvil la cual tiene como finalidad ayudar a pedir axulio a tus contactos (Configurados en la aplicación) en caso de una emergencia.
+                                Git y GitHub
                             </div>
                         </div>
-                        <footer class="card-footer">
-                            <a href="https://github.com/ErickZH/salvatuvida" target="_blank" class="card-footer-item">Ver Repositorio</a>
-                            <a href="https://play.google.com/store/apps/details?id=itch.salvatuvida&hl=es" class="card-footer-item" target="_blank">Descargar App</a>
-                        </footer>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="asset/img/java.png" alt="Certificación Genexus">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="content">
+                                Fundamentos de Programación en Java
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
