--- a/index.html
+++ b/index.html
@@ -66,20 +66,6 @@
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-info" href="https://www.instagram.com/erick_hz" target="_blank">
-                                    <span class="icon">
-                                        <i class="fa fa-instagram"></i>
-                                    </span>
-                                </a>
-                            </p>
-                            <p class="control">
-                                <a class="button is-info" href="https://www.facebook.com/erick.zaratehernandez" target="_blank">
-                                    <span class="icon">
-                                        <i class="fa fa-facebook-official"></i>
-                                    </span>
-                                </a>
-                            </p>
-                            <p class="control">
                                 <a class="button is-danger" href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-youtube-play"></i>
@@ -139,13 +125,13 @@
                     </span>
                 </li>
                 <li>
-                    Vue js
+                    Vue js 2
                 </li>
                 <li>
                     Axios
                 </li>
                 <li>
-                    Git
+                    Git y Git Flow
                 </li>
                 <li>
                     HTML 5, CSS 3 y JavaScript
