--- a/proyectos.html
+++ b/proyectos.html
@@ -66,20 +66,6 @@
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-info" href="https://www.instagram.com/erick_hz" target="_blank">
-                                    <span class="icon">
-                                        <i class="fa fa-instagram"></i>
-                                    </span>
-                                </a>
-                            </p>
-                            <p class="control">
-                                <a class="button is-info" href="https://www.facebook.com/erick.zaratehernandez" target="_blank">
-                                    <span class="icon">
-                                        <i class="fa fa-facebook-official"></i>
-                                    </span>
-                                </a>
-                            </p>
-                            <p class="control">
                                 <a class="button is-danger" href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-youtube-play"></i>
@@ -129,8 +115,43 @@
         <div class="container">
             <h1 class="title">Proyectos</h1>
             <h2 class="subtitle">Estos son algunos de los proyectos en los que he trabajado.</h2>
-            <h3 class="subtitle">Si gustas puedes contribuir ;)</h3>
             <hr>
+            <div class="columns">
+                <div class="column">
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title">
+                                Espressamente
+                            </p>
+                        </header>
+                        <div class="card-content">
+                            <div class="content">
+                                Sistema Web para el restaurante Espressamente.
+                            </div>
+                        </div>
+                        <footer class="card-footer">
+                            <a href="http://serene-island-65011.herokuapp.com/" class="card-footer-item" target="_blank">Ver Proyecto</a>
+                        </footer>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <header class="card-header">
+                            <p class="card-header-title">
+                                Wood Style
+                            </p>
+                        </header>
+                        <div class="card-content">
+                            <div class="content">
+                                Sitio web de la revista Wood Style
+                            </div>
+                        </div>
+                        <footer class="card-footer">
+                            <a href="https://www.woodstyle.media/" target="_blank" class="card-footer-item">Ver Proyecto</a>
+                        </footer>
+                    </div>
+                </div>
+            </div>
             <div class="columns">
                 <div class="column">
                     <div class="card">
