--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css">
 </head>
 <body>
-	<nav class="navbar is-info">
+	<nav class="navbar is-dark">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://erickzh.github.io/">
@@ -52,25 +52,24 @@
                     <div class="navbar-item">
                         <div class="field is-grouped">
                             <p class="control">
-                                <a class="button is-info" href="https://github.com/ErickZH" target="_blank">
+                                <a class="button is-dark" href="https://github.com/ErickZH" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-github"></i>
                                     </span>
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-info" href="https://twitter.com/ezarateh" target="_blank">
+                                <a class="button is-dark" href="https://twitter.com/ezarateh" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-twitter"></i>
                                     </span>
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-danger" href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank">
+                                <a class="button is-dark" href="https://www.youtube.com/programacionjje" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-youtube-play"></i>
                                     </span>
-                                    <span>YouTube</span>
                                 </a>
                             </p>
                         </div>
@@ -80,7 +79,7 @@
         </div>
 	</nav>
 
-    <section class="hero is-primary is-bold">
+    <section class="hero is-info is-bold">
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">Erick Zarate Hernández</h1>
@@ -114,12 +113,12 @@
     <section class="section">
         <div class="container">
             <h1 class="title">Profesión</h1>
-            <h2 class="subtitle">Soy graduado de la carrera de Ingenieria en Sistemas Computaciones por el Instituto Tecnológico de Chilpancingo.</h2>
-            <h3 class="subtitle">Actualmente me desempeño como <b>Desarrollador Web</b> en <a href="http://evolutionhc.com.mx/" target="_blank">Evolution HC</a></h3>
+            <h2 class="subtitle">Soy graduado de la carrera de Ingeniería en Sistemas Computaciones por el Instituto Tecnológico de Chilpancingo.</h2>
+            <h3 class="subtitle">Actualmente me desempeño como <b>Desarrollador Web</b> y tutor en <b>Programación JJE.</b></h3>
             <h3 class="subtitle">Las tecnológias y herramientas que utilizo en mi día a día son las siguientes:</h3>
             <ul>
                 <li>
-                    Laravel 5.5
+                    Laravel 5
                     <span class="icon has-text-danger">
                         <i class="fa fa-heart"></i>
                     </span>
@@ -128,29 +127,31 @@
                     Vue js 2
                 </li>
                 <li>
-                    Axios
-                </li>
-                <li>
                     Git y Git Flow
                 </li>
                 <li>
                     HTML 5, CSS 3 y JavaScript
                 </li>
                 <li>
-                    Bootstrap 4 y Materialize CSS
+                    Bootstrap 4, Materialize CSS y Vuetify
                 </li>
                 <li>
                     Digital Ocean
                 </li>
                 <li>
-                    Bitbucket
-                </li>
-                <li>
-                    GitHub
+                    GitHub, Bitbucket y GitLab
                 </li>
             </ul>
         </div>
     </section>
+
+	<footer class="footer">
+	  	<div class="content has-text-centered">
+			<a href="https://bulma.io">
+				<img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+			</a>
+	  	</div>
+	</footer>
 
 	<script src="asset/js/main.js"></script>
 </body>
