--- a/proyectos.html
+++ b/proyectos.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.css">
 </head>
 <body>
-    <nav class="navbar is-info">
+    <nav class="navbar is-dark">
         <div class="container">
             <div class="navbar-brand">
                 <a class="navbar-item" href="https://erickzh.github.io/">
@@ -52,25 +52,24 @@
                     <div class="navbar-item">
                         <div class="field is-grouped">
                             <p class="control">
-                                <a class="button is-info" href="https://github.com/ErickZH" target="_blank">
+                                <a class="button is-dark" href="https://github.com/ErickZH" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-github"></i>
                                     </span>
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-info" href="https://twitter.com/ezarateh" target="_blank">
+                                <a class="button is-dark" href="https://twitter.com/ezarateh" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-twitter"></i>
                                     </span>
                                 </a>
                             </p>
                             <p class="control">
-                                <a class="button is-danger" href="https://www.youtube.com/channel/UCKzeZ0NI37pJjGDUUyEKDCw" target="_blank">
+                                <a class="button is-dark" href="https://www.youtube.com/programacionjje" target="_blank">
                                     <span class="icon">
                                         <i class="fa fa-youtube-play"></i>
                                     </span>
-                                    <span>YouTube</span>
                                 </a>
                             </p>
                         </div>
@@ -80,7 +79,7 @@
         </div>
     </nav>
 
-    <section class="hero is-primary is-bold">
+    <section class="hero is-info is-bold">
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">Erick Zarate Hernández</h1>
@@ -157,17 +156,16 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title">
-                                Kit del Programador
+                                Revolution Talent
                             </p>
                         </header>
                         <div class="card-content">
                             <div class="content">
-                                Este proyecto es una aplicación móvil cuyo objetivo es servir de herramienta para la realización de operaciones aritmeticas (suma, resta, multiplicación y división) en cualquier base númerica (base 2 a base 16).
+                                Sistema web para la solicitud y gestión de estudios socioeconómicos.
                             </div>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://github.com/ErickZH/kitdelprogramador" class="card-footer-item" target="_blank">Ver Repositorio</a>
-                            <a href="https://play.google.com/store/apps/details?id=ezh.kitdelprogramador" class="card-footer-item" target="_blank">Descargar App</a>
+                            <a href="https://revolutiontalent.com.mx/" class="card-footer-item" target="_blank">Ver Proyecto</a>
                         </footer>
                     </div>
                 </div>
@@ -175,23 +173,30 @@
                     <div class="card">
                         <header class="card-header">
                             <p class="card-header-title">
-                                Salva tu vida
+                                ES Evolution
                             </p>
                         </header>
                         <div class="card-content">
                             <div class="content">
-                                Este proyecto es una aplicación móvil la cual tiene como finalidad ayudar a pedir axulio a tus contactos (Configurados en la aplicación) en caso de una emergencia.
+                                Sistema web para la solicitud y gestión de estudios socioeconómicos.
                             </div>
                         </div>
                         <footer class="card-footer">
-                            <a href="https://github.com/ErickZH/salvatuvida" target="_blank" class="card-footer-item">Ver Repositorio</a>
-                            <a href="https://play.google.com/store/apps/details?id=itch.salvatuvida&hl=es" class="card-footer-item" target="_blank">Descargar App</a>
+                            <a href="https://testsevolution.com" target="_blank" class="card-footer-item">Ver Proyecto</a>
                         </footer>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+	  	<div class="content has-text-centered">
+			<a href="https://bulma.io">
+				<img src="https://bulma.io/images/made-with-bulma.png" alt="Made with Bulma" width="128" height="24">
+			</a>
+	  	</div>
+	</footer>
 
     <script src="asset/js/main.js"></script>
 </body>
